<resources>
    <string name="app_name">Calculadora</string>
    <string name="num1">Digite o primeiro número</string>
    <string name="num2">Digite o segundo número</string>
    <string name="numresult">Resultado</string>
    <string name="somar">Somar</string>
    <string name="subtrair">Subtrair</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
</resources>
